<resources>
    <string name="app_name">time-work-Selector</string>
    <string name="timeselector_cancel">取消</string>
    <string name="timeselector_confirm">选择</string>
    <string name="timeselector_select_time">请选择时间</string>
    <string name="timeselector_year">年</string>
    <string name="timeselector_month">月</string>
    <string name="timeselector_day">日</string>
    <string name="timeselector_hour">时</string>
    <string name="timeselector_minute">分</string>
    <string name="timeselector_up_work">上半班</string>
    <string name="timeselector_down_work">下半班</string>

</resources>
